# model-garage

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  NOTICE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
assets/: demo.cast  demo.tape
contributing/: index.html
docs/: contributing.md  getting-started.md  index.md  philosophy.md
docs/getting-started/: concepts.md  installation.md  quick-start.md
docs/guides/: analysis.md  cli.md  composition.md  debate.md  extraction.md  injection.md
docs/reference/: analyze.md  compose.md  core.md  extract.md  inject.md  registry.md  snapshot.md
docs/research/: blades.md  index.md  moe-routing.md  sparse-pathways.md
examples/: 01_open_and_inspect.py  02_extract_components.py  03_inject_between_layers.py  04_debate_chamber.py  05_registry_and_compare.py
getting-started/concepts/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
guides/analysis/: index.html
guides/cli/: index.html
guides/composition/: index.html
guides/debate/: index.html
guides/extraction/: index.html
guides/injection/: index.html
philosophy/: index.html
reference/analyze/: index.html
reference/compose/: index.html
reference/core/: index.html
reference/extract/: index.html
reference/inject/: index.html
reference/registry/: index.html
reference/snapshot/: index.html
research/: BLADE_PRINCIPLES.md  index.html
research/blades/: index.html
research/extracted-components/: README.md
research/moe-routing/: index.html
research/papers/: README.md
samples/: README.md
scripts/: demo_session.py  generate_screenshots.py  record_demo.sh
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py
(+48 files in other folders)
