[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-garage"
version = "0.1.0"
description = "Open the hood on neural networks. Component-level model surgery, analysis, and composition."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Model Garage Contributors" },
]
keywords = ["pytorch", "transformers", "model-surgery", "interpretability", "SAE", "neural-networks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
    "rich>=13.0",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
dashboard = [
    "textual>=0.40",
]
all = [
    "model-garage[dev,dashboard]",
]

[project.scripts]
garage = "model_garage.cli.app:app"

[project.urls]
Homepage = "https://github.com/model-garage/model-garage"
Documentation = "https://github.com/model-garage/model-garage/tree/main/docs"
Repository = "https://github.com/model-garage/model-garage"
Issues = "https://github.com/model-garage/model-garage/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/model_garage"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
